--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:16-alpine
@@ -15,7 +13,7 @@ services:
     networks:
       - iot-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U iotuser"]
+      test: ["CMD-SHELL", "pg_isready -U iotuser -d iotdashboard"]
       interval: 10s
       timeout: 5s
       retries: 5
