--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -15,7 +15,12 @@ spec:
     # Option 2: For local development without Git, use a local path (temporary)
     #repoURL: https://github.com/ljearypoiynt/iot-dashboard  # Local file path for testing
     targetRevision: HEAD
-    path: k8s
+    path: helm/iot-dashboard
+    helm:
+      values: |
+        frontend:
+          config:
+            apiBaseUrl: "https://dashboardapi.poiynt.com/api"
     
   destination:
     server: https://kubernetes.default.svc
