--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -1,3 +1,14 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: frontend-config
+  namespace: iot-dashboard
+data:
+  config.js: |
+    window.__APP_CONFIG__ = {
+      API_BASE_URL: "https://dashboardapi.poiynt.com/api"
+    };
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -18,10 +29,15 @@ spec:
       containers:
       - name: frontend
         image: iot-dashboard-frontend:latest
-        imagePullPolicy: Never
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
           name: http
+        volumeMounts:
+        - name: frontend-config
+          mountPath: /usr/share/nginx/html/config.js
+          subPath: config.js
+          readOnly: true
         resources:
           requests:
             memory: "128Mi"
@@ -41,6 +57,10 @@ spec:
             port: 80
           initialDelaySeconds: 5
           periodSeconds: 5
+      volumes:
+      - name: frontend-config
+        configMap:
+          name: frontend-config
 ---
 apiVersion: v1
 kind: Service
