--- a/helm/iot-dashboard/values.yaml
+++ b/helm/iot-dashboard/values.yaml
@@ -28,3 +28,15 @@ frontend:
     apiBaseUrl: "https://dashboardapi.poiynt.com/api"
 
 namespace: iot-dashboard
+
+cloudflare:
+  enabled: true
+  tunnelName: iot-dashboard
+  logLevel: info
+  frontendHostname: dashboard.poiynt.com
+  apiHostname: dashboardapi.poiynt.com
+  credentials:
+    AccountTag: "YOUR_ACCOUNT_TAG"
+    TunnelSecret: "YOUR_TUNNEL_SECRET"
+    TunnelID: "0b0b67bc-20fa-400b-a3f9-b4bc8bbadd0e"
+    Endpoint: ""
