--- a/k8s/cloudflare-tunnel-config.yaml
+++ b/k8s/cloudflare-tunnel-config.yaml
@@ -7,6 +7,7 @@ data:
   config.yaml: |
     tunnel: iot-dashboard
     credentials-file: /etc/cloudflared/creds/credentials.json
+    origincert: /etc/cloudflared/creds/cert.pem
 
     ingress:
       - hostname: dashboard.poiynt.com
