--- a/helm/iot-dashboard/values.yaml
+++ b/helm/iot-dashboard/values.yaml
@@ -2,7 +2,7 @@ frontend:
   image:
     repository: iot-dashboard-frontend
     tag: latest
-    pullPolicy: IfNotPresent
+    pullPolicy: Always
   service:
     type: NodePort
     port: 80
