--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -32,7 +32,7 @@ spec:
       containers:
       - name: frontend
         image: iot-dashboard-frontend:v1.0.0
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
           name: http
