--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -64,15 +64,21 @@ jobs:
             type=sha,prefix={{branch}}-
             type=raw,value=latest,enable={{is_default_branch}}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Get version
+        id: version
+        run: |
+          VERSION=$(cat IMAGE_VERSION.txt)
+          echo "version=${VERSION}" >> $GITHUB_OUTPUT
 
       - name: Build and push Backend image
         uses: docker/build-push-action@v5
         with:
           context: ./backend
           push: true
-          tags: ${{ steps.backend-meta.outputs.tags }}
+          tags: |
+            ${{ steps.backend-meta.outputs.tags }}
+            iot-dashboard-backend:${{ steps.version.outputs.version }}
+            iot-dashboard-backend:latest
           labels: ${{ steps.backend-meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -82,10 +88,31 @@ jobs:
         with:
           context: ./frontend
           push: true
-          tags: ${{ steps.frontend-meta.outputs.tags }}
+          tags: |
+            ${{ steps.frontend-meta.outputs.tags }}
+            iot-dashboard-frontend:${{ steps.version.outputs.version }}
+            iot-dashboard-frontend:latest
           labels: ${{ steps.frontend-meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      - name: Update Kustomization with new image tags
+        if: github.event_name == 'release'
+        run: |
+          # Install kustomize
+          curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh" | bash
+          
+          # Update image tags in kustomization
+          cd k8s
+          ./kustomize edit set image iot-dashboard-backend=${{ env.REGISTRY }}/${{ env.BACKEND_IMAGE_NAME }}:${{ github.event.release.tag_name }}
+          ./kustomize edit set image iot-dashboard-frontend=${{ env.REGISTRY }}/${{ env.FRONTEND_IMAGE_NAME }}:${{ github.event.release.tag_name }}
+          
+          # Commit and push changes
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add kustomization.yaml
+          git commit -m "Update image tags to ${{ github.event.release.tag_name }}"
+          git push
 
       - name: Update Kustomization with new image tags
         if: github.event_name == 'release'
