--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -21,10 +21,10 @@ commonAnnotations:
 images:
   - name: iot-dashboard-backend
     newName: iot-dashboard-backend
-    newTag: v1.0.3
+    newTag: latest
   - name: iot-dashboard-frontend
     newName: iot-dashboard-frontend
-    newTag: v1.0.3
+    newTag: latest
 
 # Patches for different environments can be added here
 # patchesStrategicMerge:
