--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -31,7 +31,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: iot-dashboard-frontend:v1.0.3
+        image: iot-dashboard-frontend:latest
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
