--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
       - name: backend
         image: iot-dashboard-backend:latest
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         ports:
         - containerPort: 5000
           name: http
