--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -32,7 +32,7 @@ spec:
       containers:
       - name: frontend
         image: iot-dashboard-frontend:latest
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
           name: http
