Add debug logging to cloudflare tunnel

--- a/k8s/cloudflare-tunnel-deployment.yaml
+++ b/k8s/cloudflare-tunnel-deployment.yaml
@@ -26,6 +26,8 @@ spec:
           - /etc/cloudflared/config/config.yaml
           - --origincert
           - /etc/cloudflared/creds/cert.pem
+          - --loglevel
+          - debug
           - run
         ports:
         - containerPort: 7844
