feat: logging url

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -7,6 +7,9 @@ server {
     # Serve config.js directly (don't route to index.html)
     location = /config.js {
         try_files $uri =404;
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
     }
 
     location / {
