--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -29,6 +29,10 @@ COPY --from=build /app/build .
 # Copy nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
+# Startup script to log config at runtime
+COPY start.sh /start.sh
+RUN chmod +x /start.sh
+
 EXPOSE 80
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["/start.sh"]
