--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -24,10 +24,10 @@ commonAnnotations:
 images:
   - name: iot-dashboard-backend
     newName: ghcr.io/ljearypoiynt/iot-dashboard/backend
-    newTag: main
+    newTag: lastest
   - name: iot-dashboard-frontend
     newName: ghcr.io/ljearypoiynt/iot-dashboard/frontend
-    newTag: main
+    newTag: latest
 
 # Patches for different environments can be added here
 # patchesStrategicMerge:
