--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -24,7 +24,7 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
 
     steps:
@@ -81,22 +81,38 @@ jobs:
           labels: ${{ steps.frontend-meta.outputs.labels }}
 
       - name: Update Kustomization with new image tags
-        if: github.event_name == 'release'
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
-          # Install kustomize
-          curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh" | bash
+          # Use the short SHA as the image tag
+          IMAGE_TAG="main-${GITHUB_SHA::7}"
           
-          # Update image tags in kustomization
-          cd k8s
-          ./kustomize edit set image iot-dashboard-backend=${{ env.REGISTRY }}/${{ env.BACKEND_IMAGE_NAME }}:${{ github.event.release.tag_name }}
-          ./kustomize edit set image iot-dashboard-frontend=${{ env.REGISTRY }}/${{ env.FRONTEND_IMAGE_NAME }}:${{ github.event.release.tag_name }}
+          echo "Updating kustomization.yaml with image tag: $IMAGE_TAG"
           
-          # Commit and push changes
+          # Update kustomization.yaml with new image tags
+          sed -i "s|newTag: .*|newTag: $IMAGE_TAG|g" k8s/kustomization.yaml
+          
+          # Show the changes
+          echo "Updated kustomization.yaml:"
+          cat k8s/kustomization.yaml
+
+      - name: Commit and push changes
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: |
+          IMAGE_TAG="main-${GITHUB_SHA::7}"
+          
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add kustomization.yaml
-          git commit -m "Update image tags to ${{ github.event.release.tag_name }}"
-          git push
+          
+          git add k8s/kustomization.yaml
+          
+          # Only commit if there are changes
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "chore: update image tags to $IMAGE_TAG [skip ci]"
+            git push
+            echo "Successfully pushed image tag update"
+          fi
 
       - name: Update Kustomization with new image tags
         if: github.event_name == 'release'
