--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -4,7 +4,7 @@ metadata:
   name: iot-dashboard
   namespace: argocd
   finalizers:
-    - resources-finalizer.argocd.argoproj.io
+    - argoproj.io/resources-finalizer
 spec:
   project: default
   
