--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -1,24 +1,5 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: postgres-pvc
-  namespace: iot-dashboard
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 5Gi
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: postgres-config
-  namespace: iot-dashboard
-data:
-  POSTGRES_DB: iotdashboard
-  POSTGRES_USER: iotuser
----
+# iot-dashboard now uses shared postgres instance from shared-data namespace
+# This ExternalName service routes to the shared postgres service
 apiVersion: v1
 kind: Secret
 metadata:
@@ -26,83 +7,7 @@ metadata:
   namespace: iot-dashboard
 type: Opaque
 stringData:
-  POSTGRES_PASSWORD: iotpassword123
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: postgres
-  namespace: iot-dashboard
-  labels:
-    app: postgres
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: postgres
-  template:
-    metadata:
-      labels:
-        app: postgres
-    spec:
-      containers:
-      - name: postgres
-        image: postgres:16-alpine
-        ports:
-        - containerPort: 5432
-          name: postgres
-        env:
-        - name: POSTGRES_DB
-          valueFrom:
-            configMapKeyRef:
-              name: postgres-config
-              key: POSTGRES_DB
-        - name: POSTGRES_USER
-          valueFrom:
-            configMapKeyRef:
-              name: postgres-config
-              key: POSTGRES_USER
-        - name: POSTGRES_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: postgres-secret
-              key: POSTGRES_PASSWORD
-        - name: PGDATA
-          value: /var/lib/postgresql/data/pgdata
-        volumeMounts:
-        - name: postgres-storage
-          mountPath: /var/lib/postgresql/data
-        resources:
-          requests:
-            memory: "256Mi"
-            cpu: "250m"
-          limits:
-            memory: "512Mi"
-            cpu: "500m"
-        livenessProbe:
-          exec:
-            command:
-            - pg_isready
-            - -U
-            - iotuser
-            - -d
-            - iotdashboard
-          initialDelaySeconds: 30
-          periodSeconds: 10
-        readinessProbe:
-          exec:
-            command:
-            - pg_isready
-            - -U
-            - iotuser
-            - -d
-            - iotdashboard
-          initialDelaySeconds: 5
-          periodSeconds: 5
-      volumes:
-      - name: postgres-storage
-        persistentVolumeClaim:
-          claimName: postgres-pvc
+  POSTGRES_PASSWORD: postgrespassword123
 ---
 apiVersion: v1
 kind: Service
@@ -110,9 +15,8 @@ metadata:
   name: postgres-service
   namespace: iot-dashboard
 spec:
-  type: ClusterIP
-  selector:
-    app: postgres
+  type: ExternalName
+  externalName: postgres-service.shared-data.svc.cluster.local
   ports:
   - protocol: TCP
     port: 5432
