--- a/k8s/cloudflare-tunnel-config.yaml
+++ b/k8s/cloudflare-tunnel-config.yaml
@@ -12,6 +12,9 @@ data:
     ingress:
       - hostname: dashboard.poiynt.com
         service: http://frontend-service.iot-dashboard.svc.cluster.local:80
+
+      - hostname: music.poiynt.com
+        service: http://frontend-service.iot-dashboard.svc.cluster.local:80
       
       - hostname: dashboardapi.poiynt.com
         service: http://backend-service.iot-dashboard.svc.cluster.local:5000
