fix: postgres volume issue

--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -43,3 +43,7 @@ spec:
       kind: Deployment
       jsonPointers:
         - /spec/replicas
+    - group: ""
+      kind: PersistentVolumeClaim
+      jsonPointers:
+        - /spec/volumeName
