--- a/k8s/postgres-shared.yaml
+++ b/k8s/postgres-shared.yaml
@@ -18,6 +18,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
+  storageClassName: standard
   resources:
     requests:
       storage: 20Gi
